# McScript

./: .config.ini  .gitignore  .travis.yml  LICENSE  README.md  mcscript.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml  tests.yml
docs/: update_doc.cmd
docs/source/: conf.py  (+16 more)
examples/: bounding_box_detector.mcscript  clock.mcscript  compass.mcscript  enum.mcscript  environment.mcscript  fill_blocks.mcscript  fixed_point.mcscript  function.mcscript  get_block.mcscript  hexColor.mcscript  if.mcscript  iterator_concept.mcscript  mandelbrot.mcscript  mandelbrot2.mcscript  math.mcscript  random.mcscript  raycast.mcscript  rotation.mcscript  selectors.mcscript  static_code_safety.mcscript  struct.mcscript  text.mcscript  timer.mcscript  worldborder.mcscript
mcscript/: McScript.lark  __init__.py  __version__.py  cli.py  compile.py  mcscript_cli.py  selector.lark  textMarkup.lark
mcscript.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sandbox/: ScriptCollection.py
server/: eula.txt  server.properties
src/: mcscript.py
test/: .lark_cache_5dd303463e7359f2663dc42347b5fd6d.tmp  .lark_cache_6012d105339c3d796e7ade0b93a38bf1.tmp  .lark_cache_ab4f42d366ad6b898c6db3b789a57f0f.tmp  ScriptCollection.py  TestAddress.py  TestDataReader.py  TestFunctionSignature.py  TestNamespace.py  TestStringResource.py  TestUtils.py  __main__.py  config.ini  utils.py
tests/: ScriptCollection.py  TestBiomes.py  TestDataReader.py  TestNamespace.py  TestStringResource.py  config.ini  test_compile_fail.py  test_grammar.py
(+343 files in other folders)
