[tool.poetry]
name = "mcscript"
version = "0.0.1"
description = "A powerful compiler for minecraft datapackspoetry"
authors = ["Inky <47245667+Inky-developer@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lark-parser = "^0.9.0"
NBT = "^1.5.0"
appdirs = "^1.4.4"
certifi = "^2020.6.20"

[tool.poetry.dev-dependencies]
mcrcon = "^0.6.0"
sphinx = "^3.2.1"
cx_freeze = "^6.2"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
